# FC2-Leak-Detector

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  config.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  setup.py
.github/workflows/: publish.yml  python-tests.yml
colab/: FC2_Leak_Detector_Colab.ipynb
i18n/: en.json  ja.json  preference.json  zh.json
src/: __init__.py
src/checkers/: __init__.py  fc2analyzer.py  fc2checker.py
src/utils/: __init__.py  cache_manager.py  fc2_video_parser.py  i18n.py  jellyfin_metadata_generator.py  logger.py  report_generator.py  request_handler.py  ui_manager.py
src/writers/: __init__.py  writer_extractor.py
