[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88

[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm>=7.0"]
build-backend = "setuptools.build_meta"

# 添加项目元数据
[project]
name = "fc2-leak-detector"
dynamic = ["version"]
description = "FC2流出检测器，用于查询和分析FC2视频流出状态"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "soundstarrain", email = "114404785+soundstarrain@users.noreply.github.com"}
]
dependencies = [
    "requests>=2.25.0",
    "beautifulsoup4>=4.9.0",
    "tqdm>=4.60.0",
    "pycryptodome>=3.10.1",
    "rich>=13.0.0",
    "loguru>=0.5.0",
]

[project.urls]
"Homepage" = "https://github.com/FC2-Research-Club/FC2-Leak-Detector"
"Bug Tracker" = "https://github.com/FC2-Research-Club/FC2-Leak-Detector/issues"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "venv",
    ".venv",
    ".env",
    "env"
] 

[tool.setuptools.dynamic]
version = {attr = "src.__version__"}

[tool.setuptools]
packages = ["src"] 
