[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88

[build-system]
requires = ["hatchling>=1.13.0", "hatch-vcs"]
build-backend = "hatchling.build"

# 添加项目元数据
[project]
name = "fc2-leak-detector"
dynamic = ["version"]
description = "FC2流出检测器，用于查询和分析FC2视频流出状态"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "FC2 Research Club", email = "fc2researchclub@gmail.com"}
]
maintainers = [
    {name = "FC2 Research Club", email = "fc2researchclub@gmail.com"}
]
keywords = ["fc2", "video", "analyzer", "leak", "detector"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities"
]
dependencies = [
    "requests>=2.25.0",
    "beautifulsoup4>=4.9.0",
    "tqdm>=4.60.0",
    "pycryptodome>=3.10.1",
    "rich>=13.0.0",
    "loguru>=0.5.0",
]

[project.urls]
"Homepage" = "https://github.com/FC2-Research-Club/FC2-Leak-Detector"
"Bug Tracker" = "https://github.com/FC2-Research-Club/FC2-Leak-Detector/issues"
"Source Code" = "https://github.com/FC2-Research-Club/FC2-Leak-Detector"
"Documentation" = "https://github.com/FC2-Research-Club/FC2-Leak-Detector/blob/main/README.md"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "venv",
    ".venv",
    ".env",
    "env"
] 

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src"] 
